@@ -782,7 +782,7 @@ The file itself is:
           \begin{itemize}
             \item {\tt pb}: PBE (Perdew, Burke, and Ernzerhof, 
                                  PRL 77, 3865 (1996)) (recommended GGA)
-            \item {\tt pg}: PW91 (Perdew and Wang, JCP, 100, 1290 (1994))
+            \item {\tt wp}: PW91 (Perdew and Wang, JCP, 100, 1290 (1994))
             \item {\tt rp}: RPBE (Hammer, Hansen, and Norskov, 
                                   PRB 59, 7413 (1999))
             \item {\tt rv}: revPBE (Zhang and Yang, PRL 80, 890 (1998)) 
